base/lexiplatform/base/services/gavel.yaml
apiVersion: v1
kind: Service
metadata:
  name: gavel
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: gavel
