base/lexiplatform/base/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lexiplatform-ingress
spec:
  rules:
  - host: api.dev.lexiplatform.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gavel
            port:
              number: 8080
