base/lexiplatform/base/services/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gavel-network-policy
spec:
  podSelector:
    matchLabels:
      app: gavel
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: lexiplatform
    ports:
    - protocol: TCP
      port: 8080
